--- a/package.json
+++ b/package.json
@@ -1,14 +1,21 @@
 {
-  "name": "frontend",
+  "name": "merncomm-frontend",
   "version": "0.1.0",
   "private": true,
   "dependencies": {
+    "@material-ui/core": "^4.12.1",
     "@testing-library/jest-dom": "^5.14.1",
     "@testing-library/react": "^11.2.7",
     "@testing-library/user-event": "^12.8.3",
+    "bootstrap": "^5.0.2",
+    "cors": "^2.8.5",
+    "css-what": "^5.0.1",
     "react": "^17.0.2",
+    "react-bootstrap": "^1.6.1",
     "react-dom": "^17.0.2",
-    "react-scripts": "4.0.3",
+    "react-refresh-webpack-plugin": "^0.1.0",
+    "react-scripts": "^4.0.3",
+    "type-fest": "^0.21.3",
     "web-vitals": "^1.1.2"
   },
   "scripts": {
